# SearchEngine

./: CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
nlohmann json/: CMakeLists.txt  Makefile  README.md  wsjcpp.yml
nlohmann json/cmake/: ci.cmake  test.cmake
nlohmann json/docs/examples/: diff.cpp
nlohmann json/include/nlohmann/: json.hpp
nlohmann json/single_include/nlohmann/: json.hpp
nlohmann json/tests/abi/include/nlohmann/: json_v3_10_5.hpp
nlohmann json/tests/src/: unit-wstring.cpp
nlohmann json/tools/amalgamate/: amalgamate.py
nlohmann json/tools/serve_header/: serve_header.py
source/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  InvertedIndex_test.cpp  SearchServer_test.cpp
